Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-87300

BSONColumnBuilder::intermediate can lose data

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Labels:
      None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-03-04

      BSONColumnBuilder::intermediate can lose data when a diff is requested after appending more data that does just result in re-writes of simple8b blocks compared to the last intermediate call.

            Assignee:
            henrik.edin@mongodb.com Henrik Edin
            Reporter:
            henrik.edin@mongodb.com Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: