SERVER-87300 Fix intermediate when rewriting last block (#19459)

GitOrigin-RevId: a3fb14fe3d872af622a4a4b03aa181062f122973